--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ li {
 .header {
     background-color: white;
     height: 90px;
-    position: fixed;
+    /*position: fixed;*/
 }
 
 .header-logo {
@@ -18,11 +18,15 @@ li {
 }
 
 .header-list {
-    float: left;
+    float: right;
 }
 
 .main {
     height: 600px;
+}
+
+.skills {
+
 }
 
 .footer {
