--- a/main.css
+++ b/main.css
@@ -1,8 +1,33 @@
-
 li {
     list-style: none;
     float: left;
     padding: 32px 20px;
+}
+
+.skills img {
+    width: 200px;
+    height: 200px;
+}
+
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+  
+table tr{
+  border-bottom: solid 1px #eee;
+  cursor: pointer;
+}
+  
+table tr:hover{
+  background-color: #d4f0fd;
+}
+
+table th,table td{
+  text-align: center;
+  width: 25%;
+  padding: 15px 0;
 }
 
 .header {
@@ -22,11 +47,20 @@ li {
 }
 
 .main {
-    height: 600px;
+    height: 2000px;
 }
 
-.skills {
+.section-style {
+    border-top: 2px solid #333;
+}
 
+.languages {
+    float: left;
+    padding: 10px;
+}
+
+.languages p {
+    width: 200px;
 }
 
 .footer {
@@ -34,6 +68,18 @@ li {
     height: 270px;
 }
 
+.footer-logo {
+    float: left;
+    font-size: 36px;
+    padding: 20px 40px;
+}
+
 .footer-list {
     float: right;
+}
+
+.footer img {
+    width: 50px;
+    height: 50px;
+    padding: 10px;
 }
