--- a/main.css
+++ b/main.css
@@ -8,6 +8,12 @@ li {
     padding: 32px 20px;
 }
 
+img {
+    width:100%;
+    max-width: 100%;
+    height: auto;
+}
+
 table{
   border-collapse: collapse;
   border-spacing: 0;
@@ -15,7 +21,7 @@ table{
 }
   
 table tr{
-  border-bottom: solid 1px #eee;
+  border-bottom: 1px solid #eee;
   cursor: pointer;
 }
   
@@ -51,7 +57,7 @@ table th,table td{
 }
 
 .main {
-    height: 4000px;
+    /*height: 4000px;*/
 }
 
 .section-style {
@@ -59,26 +65,16 @@ table th,table td{
     padding: 10px;
 }
 
-.skills img {
+.skillitems {
+    float: left;
+}
+
+.skillitems img {
     width: 150px;
     height: 150px;
 }
 
-.hard {
-    float: left;
-    padding: 10px;
-}
-
-.hard p {
-    width: 150px;
-}
-
-.languages {
-    float: left;
-    padding: 10px;
-}
-
-.languages p {
+.skillitems p {
     width: 150px;
 }
 
