--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -43,6 +47,12 @@ table th,table td{
 .header {
     background-color: white;
     height: 90px;
+    /*
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    */
 }
 
 .header-logo {
@@ -148,4 +158,12 @@ table th,table td{
 
 .canime {
     color: black;
+}
+
+.menu-icon {
+    color: white;
+    float: right;
+    font-size: 25px;
+    padding: 21px 0;
+    display: none;
 }
