add Atcoder api and Codeforces api

--- a/main.css
+++ b/main.css
@@ -62,11 +62,13 @@ table th,table td{
 }
 
 .header-list {
-    float: right;
+    /*float: right;*/
+    display: flex;
 }
 
 .header-list li {
     font-size: 20px;
+    flex: auto;
 }
 
 .main {
