--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 html {
@@ -23,25 +24,25 @@ img {
 }
 
 table{
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
 }
   
 table tr{
-  border-bottom: 1px solid #eee;
-  cursor: pointer;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
 }
   
 table tr:hover{
-  background-color: #d4f0fd;
+    background-color: #d4f0fd;
 }
 
 table th,table td{
-  font-size: 20px;
-  text-align: center;
-  width: 25%;
-  padding: 15px 0;
+    font-size: 20px;
+    text-align: center;
+    width: 25%;
+    padding: 15px 0;
 }
 
 .header {
