--- a/main.css
+++ b/main.css
@@ -168,30 +168,43 @@ table th,table td{
 }
 
 .v-enter-active {
-  transition: opacity 1s, transform 1s;
+    transition: opacity 1s, transform 1s;
 }
 
 .v-enter {
-  opacity: 0;
-  transform: translateY(-20px);
+    opacity: 0;
+    transform: translateY(-20px);
 }
 
 button {
-  font-size: 18px;
-  width: 160px;
-  text-decoration: none;
-  text-align: center;
-  color: #1B1B1B;
-  background: #fff;
-  border:1px solid #fff;
+    font-size: 18px;
+    width: 160px;
+    text-decoration: none;
+    text-align: center;
+    color: #1B1B1B;
+    background: #fff;
+    border:1px solid #fff;
 }
 
 button:hover {
-  background: #F2F2F2;
-  cursor: pointer;
-  text-decoration: none;
+    background: #F2F2F2;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 em {
     color: #333;
+}
+
+.top {
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-size: 32px;
+    height: 480px;
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
