--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ li {
 }
 
 img {
-    width:100%;
+    width: 100%;
     max-width: 100%;
     height: auto;
 }
@@ -45,6 +45,7 @@ table th,table td{
 }
 
 .header {
+    z-index: 100;
     background-color: white;
     height: 90px;
     position: sticky;
@@ -207,4 +208,113 @@ em {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+  
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #d4f0fd;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+  
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+  
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: #d4f0fd;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+  
+.left {
+    left: 0;
+}
+  
+.right {
+    left: 50%;
+}
+  
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid #d4f0fd;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent #d4f0fd;
+}
+  
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid #d4f0fd;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #d4f0fd transparent transparent;
+}
+  
+.right::after {
+    left: -16px;
+}
+  
+.content {
+    padding: 20px 30px;
+    background-color: #d4f0fd;
+    position: relative;
+    border-radius: 6px;
+}
+ 
+@media screen and (max-width: 600px) {
+    .timeline::after {
+        left: 31px;
+    }
+  
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+  
+    .container::before {
+        left: 60px;
+        border: medium solid #d4f0fd;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+  
+    .left::after, .right::after {
+        left: 15px;
+    }
+  
+    .right {
+        left: 0%;
+    }
 }
