--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,48 @@
-@media all and (max-width: 1170px) {
+@media all and (max-width: 600px) {
+    header {
+        background-color: white;
+        z-index: 100;
+        height: 112px;
+        position: sticky;
+        top: 0;
+    }
 
+    th {
+        font-size: 16px;
+    }
+
+    .th-left {
+        font-size: 12px;
+    }
+
+    .work-p {
+        font-size: 12px;
+    }
 }
 
-@media all and (max-width: 920px) {
-    .header-list {
-        display: none;
+@media screen and (max-width: 600px) {
+    .timeline::after {
+        left: 31px;
+    }
+  
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+  
+    .container::before {
+        left: 60px;
+        border: medium solid #d4f0fd;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+  
+    .left::after, .right::after {
+        left: 15px;
+    }
+  
+    .right {
+        left: 0%;
     }
 }
